@@ -488,7 +488,7 @@ ags_copy_pattern_channel_run_sequencer_alloc_callback(AgsDelayAudioRun *delay_au
 					    (GObject *) child_recall_id);
 	ags_recycling_create_audio_signal_with_defaults(recycling,
 							audio_signal,
-							0.0, 0);
+							0.0, attack);
 	audio_signal->flags &= (~AGS_AUDIO_SIGNAL_TEMPLATE);
 	audio_signal->stream_current = audio_signal->stream_beginning;
 	ags_connectable_connect(AGS_CONNECTABLE(audio_signal));
