@@ -38,7 +38,7 @@
 #define AGS_SOUNDCARD_DEFAULT_PCM_CHANNELS (2)
 #define AGS_SOUNDCARD_DEFAULT_SAMPLERATE (48000.0)
 #define AGS_SOUNDCARD_DEFAULT_FORMAT (AGS_SOUNDCARD_SIGNED_16_BIT)
-#define AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE (512)
+#define AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE (1024)
 #define AGS_SOUNDCARD_DEFAULT_BPM (120.0)
 #define AGS_SOUNDCARD_DEFAULT_DELAY_FACTOR (1.0 / 4.0)
 #define AGS_SOUNDCARD_DEFAULT_JIFFIE ((double) AGS_SOUNDCARD_DEFAULT_SAMPLERATE / (double) AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE)
