@@ -1,3 +1,11 @@
+ags (0.7.88)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing usage of attack affects BPM
+	* fixed code performance issue in ags-play-notation recall
+	* removed free-wheel within jack client because not supported
+	* modified default buffer size to 1024
+
 ags (0.7.87)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
